# ClionCpp

./: .gitignore  CMakeLists.txt  main.cpp
